# vaycay_v2

./: .env.local  .gitignore  Dockerfile  MIGRATION2.md  MIGRATION_PLAN.md  Makefile  README.md  alembic_population.py  data_cleaning.py  database.py  docker-compose.yml  initial_data.py  lint-staged.config.js  logging.yaml  main.py  models.py  package-lock.json  package.json  prestart.py  prestart.sh  pyproject.toml  requirements.txt  schema.py  tutorial.md
.clinerules/: 01-one-function-per-file.md  02-mantine-usage.md  03-component-props-and-keys.md  04-test-driven-development.md  05-proper-typescript-typing.md
.github/: dependabot.yml  labeler.yml
.github/workflows/: ci.yml  labeler.yml  test.yml
.husky/: install.mjs  pre-commit
alembic/: env.py
alembic/versions/: 0224f04756f7_.py  88b47298c3df_initial_migration.py
app/: __init__.py  backend_pre_start.py  deps.py  initial_data.py  main.py  models.py  run.py
app/crud/: __init__.py  base.py  crud_user.py  crud_weather_data.py
app/database/: base.py  base_class.py  init_db.py  session.py
app/models/: user.py  weather_data.py
app/schemas/: __init__.py  weather_data.py
app/utils/: config.py  data_cleaning.py
app/weather_data/: minimized_weather_population_station_data_cleaned_30k_population.json  weather_data_json.py
client/: .env.production  .eslintrc.json  .gitignore  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
client/public/: index.html
client/src/: App.tsx  index.tsx  setupTests.ts  test-utils.tsx  theme.ts  vite-env.d.ts
dataAndUtils/: cities_countries_covered.json
legacy/: README.md  data_cleaning.py  data_cleaning_2.py  data_cleaning_3.py
legacy/python-api/: Makefile  alembic.ini  pyproject.toml
server/: .eslintrc.json  .gitignore  Dockerfile  README.md  eslint.config.mjs  package.json  tsconfig.json
server/prisma/: schema.prisma
server/scripts/: import-data.ts
server/src/: context.ts  index.ts  schema.ts
templates/: date_selected.html  dates.html  item.html
tests/: test_sql_app.py
uncleaned_data/: cities_countries_covered_population_30k.json  plot_raw_data.py
uncleaned_data/map/: italy_weather_stations.html
utils/: config.py  fastapi_utils.py
vaycay/: backend_pre_start.py  deps.py  main.py  run.py
vaycay/city_data/: all_location_specific_data.csv  geocoding_progress.json  lat44-47_long16-19_location_specific_data.csv
vaycay/crud/: base.py  crud_user.py  crud_weather_data.py
vaycay/db/: __init__.py  base_class.py  init_db.py  utils.py
vaycay/models/: weather_data.py
vaycay/schemas/: weather_data.py
vaycay/utils/: CleanData_MatchCities_ExpandDatesAndWeather.py  config.py  const.py  data_cleaning.py  (+3 more)
(+111 files in other folders)
